# mintlayer-core

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.node-daemon  Dockerfile.wallet-cli  Dockerfile.wallet-gui  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  do_checks.sh  history.txt  logo.icns  run_kani.sh  rustfmt.toml
accounting/: Cargo.toml
accounting/src/: block_undo.rs  error.rs  lib.rs
accounting/src/delta/: combine.rs  delta_amount_collection.rs  mod.rs  tests.rs
accounting/src/pool/: cache.rs  delegation.rs  delta.rs  helpers.rs  mod.rs  operations.rs  pool_data.rs  pos_accounting.rs  reward.rs  view.rs
accounting/src/storage/: in_memory.rs  mod.rs
block_production/: Cargo.toml
block_production/src/: lib.rs  pow.rs  temp_POWConfig.rs  temp_netupgrade.rs
block_production/src/pow/: compact.rs  constants.rs  data.rs  helpers.rs  impls.rs  mod.rs  network.rs  pow.rs  temp.rs  traits.rs  u256.rs  work.rs
blockchain_storage/: Cargo.toml
blockchain_storage/src/: lib.rs  mock.rs  store.rs  utxo.rs  utxo_db.rs
blockprod/: Cargo.toml
blockprod/src/: config.rs  lib.rs  rpc.rs
blockprod/src/detail/: block_maker.rs  block_production_job_wrapper.rs  block_solver.rs  builder.rs  helper.rs  job_finalizer.rs  job_manager.rs  mod.rs  tests.rs  timestamp_searcher.rs  utils.rs
blockprod/src/interface/: blockprod_interface.rs  blockprod_interface_impl.rs  mod.rs
blockprod/src/tests/: mod.rs  (+1 more)
chainstate/: Cargo.toml
chainstate-storage/: Cargo.toml
chainstate-storage/src/: is_transaction_seal.rs  lib.rs  mock.rs  store.rs  utxo_db.rs
chainstate-test-framework/: Cargo.toml
chainstate-test-framework/src/: framework.rs  lib.rs  transaction_builder.rs
chainstate-tests/: Cargo.toml
chainstate-types/: Cargo.toml
chainstate-types/src/: block_index.rs  epoch_data.rs  error.rs  gen_block_index.rs  height_skip.rs  lib.rs  locator.rs  pos_randomness.rs  preconnect_data.rs  stake_modifer.rs  storage_result.rs  vrf_tools.rs
chainstate/constraints-value-accumulator/: Cargo.toml
chainstate/db-dumper/: Cargo.toml
chainstate/launcher/: Cargo.toml
chainstate/src/: chainstate_interface.rs  chainstate_interface_impl.rs  chainstate_interface_impl_delegation.rs  config.rs  consensus_interface_impl.rs  lib.rs  rpc.rs  test.rs
chainstate/storage/: Cargo.toml
chainstate/test-framework/: Cargo.toml
chainstate/test-suite/: Cargo.toml
chainstate/tx-verifier/: Cargo.toml
chainstate/types/: Cargo.toml
chainstate_test_framework/: Cargo.toml
chainstate_test_framework/src/: framework.rs  lib.rs
common/: Cargo.toml
common/src/: fixed_hash.rs  lib.rs  primitives_converters.rs  text_summary.rs  time_getter.rs  token_decimals_provider.rs  transaction.rs
common/test-helpers/: Cargo.toml
common/tests/: transaction.rs
consensus/: Cargo.toml
consensus/src/: chain_state.rs  consensus_interface.rs  consensus_interface_impl.rs  error.rs  lib.rs  orphan_blocks.rs  rpc.rs  spend_cache.rs  test.rs  validator.rs
crypto/: Cargo.toml  README
crypto/sha1/: Cargo.toml
crypto/src/: hash.rs  lib.rs
dns-server/: Cargo.toml
dns-server/src/: config.rs  error.rs  main.rs
dns_server/: Cargo.toml
dns_server/src/: config.rs  main.rs
logging/: Cargo.toml
logging/src/: lib.rs  log_style.rs  tracing_utils.rs  utils.rs
logging/tests/: env_tests.rs
mempool/: Cargo.toml
mempool/src/: config.rs  error.rs  event.rs  fee_rate.rs  feerate.rs  get_memory_usage.rs  handle.rs  inclusion_policy.rs  lib.rs  mempool_interface_impl.rs  pool.rs  rpc.rs  rpc_event.rs  tx_accumulator.rs  tx_origin.rs
mempool/types/: Cargo.toml
merkletree/: Cargo.toml
merkletree/src/: interal.rs  internal.rs  lib.rs  rand_tools.rs
mintscript/: Cargo.toml
mintscript/src/: helpers.rs  lib.rs  timelock_check.rs  translate.rs
mocks/: Cargo.toml
mocks/src/: chainstate.rs  lib.rs  mempool.rs
networking/: Cargo.toml
networking/src/: error.rs  lib.rs  test_helpers.rs
node/: Cargo.toml  mintlayer.toml
node-daemon/: Cargo.toml  RPC_INTERFACE.md
node-daemon/docs/: README.md  RPC.md  RPC_DEV.md
node-daemon/src/: main.rs
node-daemon/tests/: rpc_docs.rs  tui.rs
node-gui/: Cargo.toml  app.manifest  build.rs  icon.rc
node-gui/backend/: Cargo.toml
node-gui/src/: backend_controller.rs  dashboard.rs  main.rs  main_window.rs  node_controller.rs  settings.rs
node-lib/: Cargo.toml
node-lib/examples/: node-rpc-docs.rs
node-lib/src/: checkpoints_from_file.rs  lib.rs  mock_time.rs  node_controller.rs  node_daemon_runner.rs  options.rs  regtest_options.rs  remote_controller.rs  rpc.rs  runner.rs
node-lib/tests/: cli.rs
node/src/: config.rs  config_files.rs  future_utils.rs  initialize.rs  lib.rs  main.rs  main.rs.specialization  mock_time.rs  options.rs  regtest_options.rs  rpc.rs  runner.rs  specialization.rs  storage_config.rs  v1.rs  v2.rs
node/tests/: cli.rs
orders-accounting/: Cargo.toml
orders-accounting/src/: cache.rs  data.rs  error.rs  lib.rs  operations.rs  price_calculation.rs  view.rs
p2p/: Cargo.toml  README.md
p2p/backend-test-suite/: Cargo.toml
p2p/benches/: benches.rs
p2p/p2p-test-utils/: Cargo.toml
p2p/src/: ban_config.rs  config.rs  constants.rs  disconnection_reason.rs  error.rs  event.rs  floodsub.rs  lib.rs  message.rs  p2p_event.rs  peer.rs  peer_manager_event.rs  protocol.rs  pubsub.rs  rpc.rs  run_p2p.rs  swarm.rs  test_helpers.rs  testing_utils.rs
p2p/test-utils/: Cargo.toml
p2p/tests/: announcements_propagation.rs  backend_channels.rs  backend_libp2p.rs  backend_mock_channels.rs  backend_mock_noise.rs  backend_mock_tcp.rs  backend_mock_tcp_noise.rs  backend_noise.rs  backend_tcp.rs  ban.rs  block_announcement.rs  connect.rs  connectivity.rs  handshake.rs  libp2p-gossipsub.rs  libp2p-mdns.rs  libp2p.rs  mock-announcements.rs  p2p.rs  peer.rs  shutdown.rs  sync.rs  util.rs
p2p/types/: Cargo.toml
pos-accounting/: Cargo.toml
pos-accounting/src/: data.rs  error.rs  lib.rs
pos_accounting/: Cargo.toml
pos_accounting/src/: data.rs  error.rs  lib.rs
(+2463 files in other folders)
