[package]
name = "mintlayer-core"
description = "Bitcoin bridging blockchain node"
homepage = "https://mintlayer.org"
repository = "https://github.com/mintlayer/mintlayer-core"
readme = "README.md"
license = "MIT"
version = "0.1.0"
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]
edition = "2021"

[workspace]
members = [
  "accounting",                   # Accounting and balances abstractions
  "blockprod",                    # Block production with whatever consensus algorithm.
  "chainstate",                   # Code on chainstate of blocks and transactions.
  "chainstate/test-suite",        # Tests for the chainstate, separated to make use of the chainstate test framework.
  "common",                       # Everything else, until it's moved to another crate.
  "consensus",                    # Consensus related logic.
  "crypto",                       # Cryptographic primitives and their interfaces.
  "dns_server",                   # DNS-server.
  "logging",                      # Logging engine and its interfaces.
  "mempool",                      # Mempool interface and implementation.
  "merkletree",                   # Merkle tree implementation with merkle proofs.
  "mocks",                        # Mock implementations of our traits (used for testing)
  "node-daemon",                  # Node terminal binary.
  "node-gui",                     # Node GUI binary.
  "node-lib",                     # Node lib; the common library between daemon, tui and gui node executables.
  "p2p",                          # P2p communication interfaces and protocols.
  "p2p/backend-test-suite",       # P2p backend agnostic tests.
  "p2p/types",                    # P2p support types with minimal dependencies.
  "pos_accounting",               # PoS accounting and balances abstractions.
  "rpc",                          # Rpc abstraction and implementation.
  "script",                       # Bitcoin script and its interfaces.
  "serialization",                # Full featured serialization interfaces and implementations.
  "serialization/core",           # Serialization core tools.
  "serialization/tagged",         # Serialization for direct/tagged encoding style.
  "serialization/tagged/derive",  # direct/tagged encoding style derive macros.
  "storage",                      # storage abstraction layer and its implementation.
  "storage/backend-test-suite",   # Tests for validating storage backend implementations.
  "storage/core",                 # Core backend-agnostic storage abstraction.
  "storage/inmemory",             # In-memory storage backend implementation.
  "storage/lmdb",                 # LMDB-based persistent storage backend implementation.
  "storage/sqlite",               # SQLite-based persistent storage backend implementation.
  "subsystem",                    # Utilities for working with concurrent subsystems.
  "test",                         # Integration tests.
  "test-rpc-functions",           # RPC functions specifically for tests.
  "test-utils",                   # Various utilities for tests.
  "utils",                        # Various utilities.
  "utxo",                         # Utxo and related utilities (cache, undo, etc.).
  "wallet",                       # Wallet primitives.
  "wallet/wallet-cli",            # Wallet CLI/REPL binary.
  "wallet/wallet-cli-lib",        # Wallet CLI/REPL lib.
  "wallet/wallet-controller",     # Common code for wallet UI applications.
  "wallet/wallet-node-client",    # Wallet-to-node communication tools.
  "wasm-crypto",                  # WASM bindings for the crypto crate.
]

default-members = [
  "chainstate",
  "common",
  "crypto",
  "logging",
  "mempool",
  "node-daemon",
  "node-gui",
  "node-lib",
  "p2p",
  "rpc",
  "script",
  "serialization",
  "storage",
  "subsystem",
  "utils",
  "utxo",
  "wallet",
  "wallet/wallet-cli",
]

[dependencies]
chainstate = { path = "chainstate"}
chainstate-storage = { path = "chainstate/storage"}
chainstate-types = { path = "chainstate/types"}
common = { path = "common"}
crypto = { path = "crypto"}
logging = { path = "logging"}
mempool = { path = "mempool"}
p2p = { path = "p2p"}
rpc = { path = "rpc"}
script = { path = "script"}
serialization = { path = "serialization"}
storage = { path = "storage"}
utxo = { path = "utxo"}

[workspace.package]
edition = "2021"
rust-version = "1.67"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
arraytools = "0.1"
assert_cmd = "2"
async-trait = "0.1"
atomic-traits = "0.3"
base64 = "0.21"
bech32 = "0.9"
bip39 = { version = "2.0", default-features = false }
bitcoin-bech32 = "0.13"
blake2 = "0.10"
bytes = "1.1"
cfg-if = "1.0"
chacha20poly1305 = "0.10"
clap = "4"
criterion = "0.4"
crossterm = "0.26"
directories = "5.0"
enum-iterator = "1.4.1"
env_logger = "0.10"
expect-test = "1.3"
fallible-iterator = "0.2"
fixed-hash = "0.8"
flate2 = "1.0"
fs4 = "0.6"
futures = { version = "0.3", default-features = false }
generic-array = "0.14"
hex = "0.4"
hex-literal = "0.4"
hmac = "0.12"
http = "0.2"
hyper = "0.14"
iced = "0.9"
iced_aw = "0.5"
itertools = "0.10"
jsonrpsee = "0.17"
lazy_static = "1.4"
libtest-mimic = "0.6"
log = "0.4"
loom = "0.5"
mockall = "0.11"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.13"
oneshot = "0.1"
parity-scale-codec = "3.1"
parking_lot = "0.12"
paste = "1.0"
portpicker = "0.1"
probabilistic-collections = "0.7"
proptest = "1.0"
qrcodegen = "1.8"
quote = "1.0"
rand = "0.8"
rand_chacha = "0.3"
reedline = "0.19"
replace_with = "0.1"
ripemd = "0.1"
rlimit = "0.9"
rstest = "0.17"
rusqlite = "0.29"
schnorrkel = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_test = "1.0"
serial_test = "2.0"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
shlex = "1.0"
siphasher = "0.3"
slave-pool = "0.2"
snowstorm = "0.4"
socket2 = "0.5"
sscanf = "0.4"
static_assertions = "1.1"
syn = "2.0"
tap = "1.0"
tempfile = "3.3"
testing_logger = "0.1"
thiserror = "1.0"
tokio = { version = "1.27", default-features = false }
tokio-socks = "0.5"
tokio-util = { version = "0.7", default-features = false }
toml = "0.7"
tower = "0.4"
tower-http = "0.4"
trust-dns-client = "0.22"
trust-dns-server = "0.22"
variant_count = "1.1"
zeroize = "1.5"

[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)
debug-assertions = true
overflow-checks = true

[profile.test]
debug-assertions = true
overflow-checks = true

[profile.test.package.script]
opt-level = 2
