[package]
name = "mintlayer-core"
description = "Bitcoin bridging blockchain node"
homepage = "https://mintlayer.org"
repository = "https://github.com/mintlayer/mintlayer-core"
readme = "README.md"
license = "MIT"
version = "1.3.0"
edition = "2021"

[workspace]
members = [
  "accounting",                          # Accounting and balances abstractions.
  "api-server/api-server-common",        # API server, for light-wallets and block explorers: common between web-server and scanner.
  "api-server/storage-test-suite",       # Test suite for the abstract storage layer of the API server to ensure consistent behavior.
  "api-server/scanner-daemon",           # API server, for light-wallets and block explorers: blockchain scanner daemon.
  "api-server/scanner-lib",              # API server, for light-wallets and block explorers: blockchain scanner library.
  "api-server/stack-test-suite",         # API server, for light-wallets and block explorers: testing the scanner and web-server.
  "api-server/web-server",               # API server, for light-wallets and block explorers: web-server.
  "blockprod",                           # Block production with whatever consensus algorithm.
  "chainstate",                          # Code on chainstate of blocks and transactions.
  "chainstate/db-dumper",                # A tool for dumping the contents of the chainstate db.
  "chainstate/test-suite",               # Tests for the chainstate, separated to make use of the chainstate test framework.
  "common",                              # Everything else, until it's moved to another crate.
  "consensus",                           # Consensus related logic.
  "crypto",                              # Cryptographic primitives and their interfaces.
  "dns-server",                          # DNS-server.
  "logging",                             # Logging engine and its interfaces.
  "mempool",                             # Mempool interface and implementation.
  "mempool/types",                       # Common mempool types.
  "mintscript",                          # Basic scripting language for validating transactions.
  "mocks",                               # Mock implementations of our traits (used for testing).
  "node-daemon",                         # Node terminal binary.
  "networking",                          # Pure networking implementations
  "node-gui",                            # Node GUI binary.
  "node-gui/backend",                    # Node GUI backend, common logic for implementing GUI clients.
  "node-lib",                            # Node lib; the common library between daemon, tui and gui node executables.
  "orders-accounting",                   # Orders accounting
  "p2p",                                 # P2p communication interfaces and protocols.
  "p2p/backend-test-suite",              # P2p backend agnostic tests.
  "p2p/types",                           # P2p support types with minimal dependencies.
  "pos-accounting",                      # PoS accounting and balances abstractions.
  "randomness",                          # A wrapper around all randomness functionality to make audits easier
  "rpc",                                 # Rpc abstraction and implementation.
  "rpc/description",                     # Data types describing an RPC interface.
  "rpc/description-macro",               # Macro to generate rpc interface description.
  "rpc/types",                           # Support types for use in RPC interfaces.
  "script",                              # Bitcoin script and its interfaces.
  "serialization",                       # Full featured serialization interfaces and implementations.
  "serialization/core",                  # Serialization core tools.
  "serialization/tagged",                # Serialization for direct/tagged encoding style.
  "serialization/tagged/derive",         # direct/tagged encoding style derive macros.
  "storage",                             # storage abstraction layer and its implementation.
  "storage/backend-test-suite",          # Tests for validating storage backend implementations.
  "storage/core",                        # Core backend-agnostic storage abstraction.
  "storage/failing",                     # Storage adapter to occasionally fail certain operations, for testing.
  "storage/inmemory",                    # In-memory storage backend implementation.
  "storage/lmdb",                        # LMDB-based persistent storage backend implementation.
  "storage/sqlite",                      # SQLite-based persistent storage backend implementation.
  "subsystem",                           # Utilities for working with concurrent subsystems.
  "test",                                # Integration tests.
  "test-rpc-functions",                  # RPC functions specifically for tests.
  "test-utils",                          # Various utilities for tests.
  "tokens-accounting",                   # Tokens accounting
  "utils",                               # Various utilities.
  "utils/build_utils",                   # Build-related utilities.
  "utils/networking",                    # Various async/tokio utilities.
  "utxo",                                # Utxo and related utilities (cache, undo, etc.).
  "wallet",                              # Wallet primitives.
  "wallet/wallet-cli",                   # Wallet CLI/REPL binary.
  "wallet/wallet-cli-lib",               # Wallet CLI/REPL lib.
  "wallet/wallet-cli-commands",          # Wallet CLI/REPL commands.
  "wallet/wallet-controller",            # Common code for wallet UI applications.
  "wallet/wallet-node-client",           # Wallet-to-node communication tools.
  "wallet/wallet-address-generator",     # Wallet address generator binary.
  "wallet/wallet-address-generator-lib", # Wallet address generator lib.
  "wallet/wallet-rpc-client",            # Wallet RPC communication.
  "wallet/wallet-rpc-daemon",            # Wallet RPC daemon binary.
  "wallet/wallet-rpc-lib",               # Wallet RPC definitions library.
  "wallet/wallet-test-node",             # Node for wallet testing as a library.
  "wasm-wrappers",                       # WASM wrappers for various components.
  "wasm-wrappers/wasm-doc-gen",          # WASM wrappers documentation generator.
]

default-members = [
  "api-server/scanner-daemon",
  "api-server/web-server",
  "chainstate",
  "chainstate/db-dumper",
  "common",
  "crypto",
  "dns-server",
  "logging",
  "mempool",
  "networking",
  "node-daemon",
  "node-gui",
  "node-lib",
  "p2p",
  "rpc",
  "script",
  "serialization",
  "storage",
  "subsystem",
  "utils",
  "utxo",
  "wallet",
  "wallet/wallet-cli",
  "wallet/wallet-address-generator",
  "wallet/wallet-rpc-daemon",
]

[dependencies]
chainstate = { path = "chainstate" }
chainstate-storage = { path = "chainstate/storage" }
chainstate-types = { path = "chainstate/types" }
common = { path = "common" }
crypto = { path = "crypto" }
logging = { path = "logging" }
mempool = { path = "mempool" }
p2p = { path = "p2p" }
rpc = { path = "rpc" }
script = { path = "script" }
serialization = { path = "serialization" }
storage = { path = "storage" }
utxo = { path = "utxo" }

[workspace.package]
edition = "2021"
rust-version = "1.88"
version = "1.3.0"
license = "MIT"

[workspace.dependencies]
addr = "0.15"
anyhow = "1.0"
argon2 = "0.5"
arraytools = "0.1"
assert_cmd = "2.0"
async-trait = "0.1"
atomic-traits = "0.4"
axum = "0.7"
base64 = "0.22"
bech32 = "0.11"
bigdecimal = "0.4"
bip39 = { version = "2.0", default-features = false }
bitcoin-bech32 = "0.13"
blake2 = "0.10"
bytes = "1.1"
byte-unit = "5.1"
cfg-if = "1.0"
chacha20poly1305 = "0.10"
chrono = "0.4"
clap = "4.5"
console-subscriber = "0.5"
criterion = "0.5"
crossterm = "0.28"
csv = "1.3"
ctor = "0.2"
derive_more = { version = "1.0", features = ["full"] }
directories = "5.0"
humantime = "2.1"
dyn-clone = "1.0"
# Note: enum iteration is also provided by strum. However, with strum it's a bit more limited,
# e.g. there is no way to to go from one enum value to the next one, like enum_iterator::Sequence::next()
# does.
enum-iterator = "2.0"
enumflags2 = "0.7"
expect-test = "1.3"
file-rotate = "0.7"
fix-hidden-lifetime-bug = "0.2"
# Note: we deliberately don't enable the `rand` feature of `fixed-hash` because it still uses
# the `rand` crate v0.8.x, so the `random_using` calls generated by `construct_fixed_hash!` would
# require to use an adapter, which is inconvenient (we wrap the macro and provide our own implementation
# of `random_using` instead).
fixed-hash = { version = "0.8", default-features = false, features = ["byteorder", "rustc-hex"] }
flate2 = "1.0"
fs4 = "0.12"
futures = { version = "0.3", default-features = false }
# Note: we want to use v0.14.7 here, because the later 0.x versions produce tons of warnings
# "use of deprecated xxx ... please upgrade to generic-array 1.x".
# Also note that we can't trivially upgrade to 1.x, because some of the cryprtography-related dependencies
# still use the 0.x version, so by upgrading to 1.x we'll end up using both versions of GenericArray
# and will have to perform convertions between them.
generic-array = "=0.14.7"
heck = "0.5"
hex = "0.4"
hex-literal = "0.4"
hickory-client = "0.24"
hickory-server = "0.24"
hmac = "0.12"
http = "1.3"
hyper = "1.7"
iced = "0.13"
# Note: we need this fix - https://github.com/iced-rs/iced_aw/pull/329
# TODO: switch back to a released version of iced_aw once the fix is released (need version > 0.12)
iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev = "def1db9aac1e58a47e0c3127d4d4e95d724ca8ad" }
iced_fonts = "0.1"
indoc = "2.0"
itertools = "0.14"
jsonrpsee = { version = "0.26", default-features = false }
lazy_static = "1.4"
libtest-mimic = "0.8"
log = "0.4"
loom = "0.7"
merkletree-mintlayer = "0.1"
merlin = { version = "3.0", default-features = false }
mockall = "0.13"
num = "0.4"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.13"
oneshot = "0.1"
parity-scale-codec = "3.7"
parking_lot = "0.12"
paste = "1.0"
probabilistic-collections = "0.7"
proc-macro2 = "1.0"
proptest = "1.11"
qrcodegen = "1.8"
quote = "1.0"
rand = "0.10"
rand_core = "0.10"
rand_0_8 = { version = "0.8", package = "rand" }
rand_0_9 = { version = "0.9", package = "rand" }
rand_chacha = "0.10"
rayon = "1.10"
reedline = "0.38"
ref-cast = "1.0"
regex = "1.10"
replace_with = "0.1"
reqwest = "0.12"
rfd = { version = "0.15", default-features = false }
ripemd = "0.1"
rlimit = "0.10"
rstest = "0.24"
rstest_reuse = "0.7"
rusqlite = "0.33"
schnorrkel = "0.11"
secp256k1 = { version = "0.31", default-features = false }
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_test = "1.0"
serde_with = "3.6"
serial_test = "3.2"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
shlex = "1.0"
siphasher = "1.0"
slave-pool = "0.2"
smallvec = "1.15"
snowstorm = "0.4"
socket2 = "0.5"
sscanf = "0.4"
static_assertions = "1.1"
strum = { version = "0.26", default-features = false, features = ["derive"] }
substrate-build-script-utils = "11.0"
syn = "2.0"
tap = "1.0"
tempfile = "3.3"
testing_logger = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
] }
# Note: we need at least tokio 1.50, because it includes the PR https://github.com/tokio-rs/tokio/pull/7879, which fixes
# the potential indefinite stalling of the chainstate subsystem (reproducible on a slow machine during initial sync
# with 30+ connected peers).
tokio = { version = "1.50", default-features = false }
tokio-socks = "0.5"
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
toml = "0.8"
tower = "0.5"
tower-http = "0.5"
unwrap-infallible = "1.0"
x25519-dalek = "2.0"
zeroize = "1.5"

[workspace.dependencies.ml_primitives]
git = "https://github.com/mintlayer/mintlayer-core-primitives"
# The commit "Merge pull request #4 from mintlayer/fix_typo".
rev = "8644bfe06d932d687075939d2d175183ba1c369d"
package = "mintlayer-core-primitives"

[workspace.dependencies.ledger-lib]
git = "https://github.com/ledger-community/rust-ledger.git"
# Note: we need this PR - https://github.com/ledger-community/rust-ledger/pull/14
rev = "c8ed12e89788e78d77cdc0dc9fb8a4bd4dc24b89"

[workspace.dependencies.ledger-proto]
git = "https://github.com/ledger-community/rust-ledger.git"
# The revision must be the same as for ledger-lib.
rev = "c8ed12e89788e78d77cdc0dc9fb8a4bd4dc24b89"

[workspace.dependencies.mintlayer-ledger-messages]
git = "https://github.com/mintlayer/mintlayer-ledger-app"
# The commit "Update mintlayer-core-primitives repo revision. Enable disabled CI workflows. ..."
rev = "ffe0d6256877c1b4b18b2e4a27bdeeaa7fc5a2ff"
package = "messages"

[workspace.dependencies.trezor-client]
git = "https://github.com/mintlayer/mintlayer-trezor-firmware"
# The commit "Fix Mintlayer code after merge with v2.11.0. Update revisions of mintlayer-core-primitives and parity-scale-codec."
rev = "596b3ebf536b438156132406d2e3a3f4dde53ebc"
features = ["bitcoin", "mintlayer"]

[workspace.metadata.dist.dependencies.apt]
"libatk1.0-0" = "*"
"libatk1.0-dev" = "*"
"libgdk3.0-cil" = '*'
"libgdk3.0-cil-dev" = "*"

[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort"        # prevent panic catching (mostly for the tokio runtime)
overflow-checks = true

# "Release" profile with debug info enabled.
[profile.release-with-debug-info]
inherits = "release"
debug = true

# "Release" profile with debug info and debug assertions enabled.
[profile.release-with-debug]
inherits = "release"
debug = true
debug-assertions = true

[profile.test]
debug-assertions = true
overflow-checks = true

[profile.test.package.script]
opt-level = 2

[patch.crates-io]
# Using fontconfig-parser v0.5.8 completely breaks UI in node-gui on Linux - most of the text disappears and the few
# characters that remain have broken spacing, so we force the usage of v0.5.7 via "patch".
# Note: the commit is called "Bump version" and it's where the version was bumped to "0.5.7"; it is the last "good"
# revision. The following ("bad") revision belongs to the PR https://github.com/Riey/fontconfig-parser/pull/11 which
# claims to fix certain issues. So it's possible that fontconfig-parser v0.5.8 is actually good, but a dependent crate
# uses it incorrectly (so v0.5.7 works only because several bugs cancel each other out). The current dependency chain
# is fontconfig-parser <- fontdb <- cosmic-text <- various "iced" crates.
# TODO: investigate this further.
fontconfig-parser = { git = "https://github.com/Riey/fontconfig-parser", rev = "f7d13a779e6ee282ce75acbc00a1270c0350e0c2" }

# This patch is needed because there is no release of the library and because ledger-lib depends on ledger-proto, so this
# is the only way to make the former find the latter.
# Note that the revision specified here must be the same as the one used in the workspace.dependencies section.
ledger-proto = { git = "https://github.com/ledger-community/rust-ledger.git", rev = "c8ed12e89788e78d77cdc0dc9fb8a4bd4dc24b89" }

# Use a specific commit because we need a fix (github.com/paritytech/parity-scale-codec/pull/751)
# that has not been released yet (should be part of the release coming after v3.7.5).
# Note that the fix is needed for the Ledger app, but we have to use the same version of parity-scale-codec
# across Trezor, Ledger, mintlayer-core and mintlayer-core-primitives repos.
parity-scale-codec = { git = "https://github.com/paritytech/parity-scale-codec.git", rev = "5021525697edc0661591ebc71392c48d950a10b0" }
