[package]
name = "accounting"
license = "MIT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = '../common'}
serialization = {path = "../serialization"}
utils = {path = '../utils'}

thiserror.workspace = true
parity-scale-codec.workspace = true

[dev-dependencies]
proptest = "1.0"
rstest = "0.16"
