[package]
name = "accounting"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
common = { path = "../common" }
serialization = { path = "../serialization" }
utils = { path = "../utils" }

thiserror.workspace = true
parity-scale-codec.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
