[package]
name = "block-production"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = '../common' }
blockchain-storage = { path = '../blockchain_storage'}
consensus = {path = '../consensus'}