[package]
name = "blockchain-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = '../common' }
utxo = { path = '../utxo' }
storage = { path = '../storage'}
mockall = { version = "0.11", optional = true }
parity-scale-codec = { version = "2.3.1", features = ["chain-error"] }
thiserror = "1.0"

[dev-dependencies]
crypto = { path = '../crypto' }
mockall = "0.11"
rand = "0.8.4"

[features]
mock = [ 'mockall' ]
