[package]
name = "blockchain-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = '../common' }
utxo = { path = '../utxo' }
storage = { path = '../storage'}
mockall = { version = "0.11", optional = true }
parity-scale-codec = { version = "2.3.1", features = ["chain-error"] }
thiserror = "1.0"

[dev-dependencies]
crypto = { path = '../crypto' }
itertools = "0.10.3"
mockall = "0.11"
num-traits = "0.2.14"
rand = "0.8.4"

[features]
mock = [ 'mockall' ]
