[package]
name = "blockprod"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainstate = { path = "../chainstate/" }
chainstate-types = { path = "../chainstate/types" }
common = { path = "../common/" }
consensus = { path = "../consensus" }
crypto = { path = "../crypto/" }
mempool = { path = "../mempool/" }
serialization = { path = "../serialization" }
subsystem = { path = "../subsystem/" }
logging = {path = '../logging'}
utils = {path = '../utils'}
rpc = { path = "../rpc/" }

hex.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
void = "1.0"
jsonrpsee = { workspace = true, features = ["macros"] }
async-trait.workspace = true
slave-pool = "0.2"

[dev-dependencies]
chainstate-storage = { path = "../chainstate/storage/" }
chainstate-types = {path = '../chainstate/types'}
mocks = { path = "../mocks/" }
