[package]
name = "blockprod"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainstate = { path = "../chainstate/" }
chainstate-types = { path = "../chainstate/types" }
common = { path = "../common/" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool/" }
serialization = { path = "../serialization" }
subsystem = { path = "../subsystem/" }
logging = {path = '../logging'}
utils = {path = '../utils'}
rpc = { path = "../rpc/" }

async-trait.workspace = true
hex.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["macros"] }
parity-scale-codec.workspace = true
slave-pool = "0.2"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
void = "1.0"

[dev-dependencies]
rstest.workspace = true

chainstate-storage = { path = "../chainstate/storage/" }
chainstate-types = {path = '../chainstate/types'}
mocks = { path = "../mocks/" }
test-utils = {path = '../test-utils'}
