[package]
name = "chainstate-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = '../common' }
utxo = { path = '../utxo' }
storage = { path = '../storage'}
serialization = { path = "../serialization" }
chainstate-types = {path = '../chainstate-types'}

mockall = { version = "0.11", optional = true }
parity-scale-codec = "3.1"
thiserror = "1.0"

[dev-dependencies]
crypto = { path = '../crypto' }
itertools = "0.10"
mockall = "0.11"
num-traits = "0.2"

[features]
mock = [ 'mockall' ]
